gpt_cap/Evaluation/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    HASH

Grammar

Rule 0     S' -> scenario
Rule 1     scenario -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement statement_list
Rule 4     statement -> action
Rule 5     statement -> all_action
Rule 6     statement -> assignment
Rule 7     statement -> if_statement
Rule 8     statement -> wait_statement
Rule 9     statement -> compound_statement
Rule 10    tag_list -> TAG
Rule 11    tag_list -> tag_list TAG
Rule 12    tag_expression -> LPAREN tag_list RPAREN
Rule 13    expression -> tag_expression DOT IDENTIFIER
Rule 14    expression -> tag_expression DOT IDENTIFIER LPAREN input RPAREN
Rule 15    expression -> tag_expression DOT IDENTIFIER LPAREN RPAREN
Rule 16    action -> LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
Rule 17    action -> LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
Rule 18    all_action -> ALL LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
Rule 19    all_action -> ALL LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
Rule 20    expression -> expression AND expression
Rule 21    expression -> expression OR expression
Rule 22    expression -> ALL LPAREN tag_list RPAREN DOT IDENTIFIER
Rule 23    expression -> expression PERCENT
Rule 24    assignment -> IDENTIFIER ASSIGN expression
Rule 25    assignment -> IDENTIFIER DECLARE expression
Rule 26    expression -> IDENTIFIER
Rule 27    expression -> INTEGER
Rule 28    expression -> DOUBLE
Rule 29    expression -> STRING_LITERAL
Rule 30    expression -> expression PLUS expression
Rule 31    expression -> expression MINUS expression
Rule 32    expression -> expression TIMES expression
Rule 33    expression -> expression DIVIDE expression
Rule 34    input -> expression
Rule 35    input -> input COMMA expression
Rule 36    compound_statement -> LBRACE statement_list RBRACE
Rule 37    if_statement -> IF LPAREN condition_list RPAREN compound_statement else_clause
Rule 38    else_clause -> ELSE statement
Rule 39    else_clause -> empty
Rule 40    statement -> DELAY LPAREN expression RPAREN
Rule 41    condition_list -> condition
Rule 42    condition_list -> LPAREN condition_list RPAREN
Rule 43    condition_list -> condition_list AND condition_list
Rule 44    condition_list -> condition_list OR condition_list
Rule 45    condition_list -> ANY condition_list
Rule 46    condition_list -> ALL condition_list
Rule 47    condition_list -> NOT condition
Rule 48    condition -> expression GE expression
Rule 49    condition -> expression LE expression
Rule 50    condition -> expression EQ expression
Rule 51    condition -> expression NE expression
Rule 52    condition -> expression GT expression
Rule 53    condition -> expression LT expression
Rule 54    wait_statement -> WAIT_UNTIL LPAREN condition_list RPAREN
Rule 55    wait_statement -> WAIT_UNTIL LPAREN period_time RPAREN
Rule 56    period_time -> INTEGER time_unit
Rule 57    time_unit -> MILLISECOND
Rule 58    time_unit -> SECOND
Rule 59    time_unit -> MINUTE
Rule 60    time_unit -> HOUR
Rule 61    time_unit -> DAY
Rule 62    empty -> <empty>

Terminals, with rules where they appear

ALL                  : 18 19 22 46
AND                  : 20 43
ANY                  : 45
ASSIGN               : 24
COMMA                : 35
DAY                  : 61
DECLARE              : 25
DELAY                : 40
DIVIDE               : 33
DOT                  : 13 14 15 16 17 18 19 22
DOUBLE               : 28
ELSE                 : 38
EQ                   : 50
GE                   : 48
GT                   : 52
HASH                 : 
HOUR                 : 60
IDENTIFIER           : 13 14 15 16 17 18 19 22 24 25 26
IF                   : 37
INTEGER              : 27 56
LBRACE               : 36
LE                   : 49
LPAREN               : 12 14 15 16 16 17 17 18 18 19 19 22 37 40 42 54 55
LT                   : 53
MILLISECOND          : 57
MINUS                : 31
MINUTE               : 59
NE                   : 51
NOT                  : 47
OR                   : 21 44
PERCENT              : 23
PLUS                 : 30
RBRACE               : 36
RPAREN               : 12 14 15 16 16 17 17 18 18 19 19 22 37 40 42 54 55
SECOND               : 58
STRING_LITERAL       : 29
TAG                  : 10 11
TIMES                : 32
WAIT_UNTIL           : 54 55
error                : 

Nonterminals, with rules where they appear

action               : 4
all_action           : 5
assignment           : 6
compound_statement   : 9 37
condition            : 41 47
condition_list       : 37 42 43 43 44 44 45 46 54
else_clause          : 37
empty                : 39
expression           : 20 20 21 21 23 24 25 30 30 31 31 32 32 33 33 34 35 40 48 48 49 49 50 50 51 51 52 52 53 53
if_statement         : 7
input                : 14 17 19 35
period_time          : 55
scenario             : 0
statement            : 2 3 38
statement_list       : 1 3 36
tag_expression       : 13 14 15
tag_list             : 11 12 16 17 18 19 22
time_unit            : 56
wait_statement       : 8

Parsing method: LALR

state 0

    (0) S' -> . scenario
    (1) scenario -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement statement_list
    (4) statement -> . action
    (5) statement -> . all_action
    (6) statement -> . assignment
    (7) statement -> . if_statement
    (8) statement -> . wait_statement
    (9) statement -> . compound_statement
    (40) statement -> . DELAY LPAREN expression RPAREN
    (16) action -> . LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
    (17) action -> . LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
    (18) all_action -> . ALL LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
    (19) all_action -> . ALL LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
    (24) assignment -> . IDENTIFIER ASSIGN expression
    (25) assignment -> . IDENTIFIER DECLARE expression
    (37) if_statement -> . IF LPAREN condition_list RPAREN compound_statement else_clause
    (54) wait_statement -> . WAIT_UNTIL LPAREN condition_list RPAREN
    (55) wait_statement -> . WAIT_UNTIL LPAREN period_time RPAREN
    (36) compound_statement -> . LBRACE statement_list RBRACE

    DELAY           shift and go to state 10
    LPAREN          shift and go to state 11
    ALL             shift and go to state 13
    IDENTIFIER      shift and go to state 12
    IF              shift and go to state 14
    WAIT_UNTIL      shift and go to state 15
    LBRACE          shift and go to state 16

    scenario                       shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    action                         shift and go to state 4
    all_action                     shift and go to state 5
    assignment                     shift and go to state 6
    if_statement                   shift and go to state 7
    wait_statement                 shift and go to state 8
    compound_statement             shift and go to state 9

state 1

    (0) S' -> scenario .



state 2

    (1) scenario -> statement_list .

    $end            reduce using rule 1 (scenario -> statement_list .)


state 3

    (2) statement_list -> statement .
    (3) statement_list -> statement . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement statement_list
    (4) statement -> . action
    (5) statement -> . all_action
    (6) statement -> . assignment
    (7) statement -> . if_statement
    (8) statement -> . wait_statement
    (9) statement -> . compound_statement
    (40) statement -> . DELAY LPAREN expression RPAREN
    (16) action -> . LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
    (17) action -> . LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
    (18) all_action -> . ALL LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
    (19) all_action -> . ALL LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
    (24) assignment -> . IDENTIFIER ASSIGN expression
    (25) assignment -> . IDENTIFIER DECLARE expression
    (37) if_statement -> . IF LPAREN condition_list RPAREN compound_statement else_clause
    (54) wait_statement -> . WAIT_UNTIL LPAREN condition_list RPAREN
    (55) wait_statement -> . WAIT_UNTIL LPAREN period_time RPAREN
    (36) compound_statement -> . LBRACE statement_list RBRACE

    $end            reduce using rule 2 (statement_list -> statement .)
    RBRACE          reduce using rule 2 (statement_list -> statement .)
    DELAY           shift and go to state 10
    LPAREN          shift and go to state 11
    ALL             shift and go to state 13
    IDENTIFIER      shift and go to state 12
    IF              shift and go to state 14
    WAIT_UNTIL      shift and go to state 15
    LBRACE          shift and go to state 16

    statement                      shift and go to state 3
    statement_list                 shift and go to state 17
    action                         shift and go to state 4
    all_action                     shift and go to state 5
    assignment                     shift and go to state 6
    if_statement                   shift and go to state 7
    wait_statement                 shift and go to state 8
    compound_statement             shift and go to state 9

state 4

    (4) statement -> action .

    DELAY           reduce using rule 4 (statement -> action .)
    LPAREN          reduce using rule 4 (statement -> action .)
    ALL             reduce using rule 4 (statement -> action .)
    IDENTIFIER      reduce using rule 4 (statement -> action .)
    IF              reduce using rule 4 (statement -> action .)
    WAIT_UNTIL      reduce using rule 4 (statement -> action .)
    LBRACE          reduce using rule 4 (statement -> action .)
    $end            reduce using rule 4 (statement -> action .)
    RBRACE          reduce using rule 4 (statement -> action .)


state 5

    (5) statement -> all_action .

    DELAY           reduce using rule 5 (statement -> all_action .)
    LPAREN          reduce using rule 5 (statement -> all_action .)
    ALL             reduce using rule 5 (statement -> all_action .)
    IDENTIFIER      reduce using rule 5 (statement -> all_action .)
    IF              reduce using rule 5 (statement -> all_action .)
    WAIT_UNTIL      reduce using rule 5 (statement -> all_action .)
    LBRACE          reduce using rule 5 (statement -> all_action .)
    $end            reduce using rule 5 (statement -> all_action .)
    RBRACE          reduce using rule 5 (statement -> all_action .)


state 6

    (6) statement -> assignment .

    DELAY           reduce using rule 6 (statement -> assignment .)
    LPAREN          reduce using rule 6 (statement -> assignment .)
    ALL             reduce using rule 6 (statement -> assignment .)
    IDENTIFIER      reduce using rule 6 (statement -> assignment .)
    IF              reduce using rule 6 (statement -> assignment .)
    WAIT_UNTIL      reduce using rule 6 (statement -> assignment .)
    LBRACE          reduce using rule 6 (statement -> assignment .)
    $end            reduce using rule 6 (statement -> assignment .)
    RBRACE          reduce using rule 6 (statement -> assignment .)


state 7

    (7) statement -> if_statement .

    DELAY           reduce using rule 7 (statement -> if_statement .)
    LPAREN          reduce using rule 7 (statement -> if_statement .)
    ALL             reduce using rule 7 (statement -> if_statement .)
    IDENTIFIER      reduce using rule 7 (statement -> if_statement .)
    IF              reduce using rule 7 (statement -> if_statement .)
    WAIT_UNTIL      reduce using rule 7 (statement -> if_statement .)
    LBRACE          reduce using rule 7 (statement -> if_statement .)
    $end            reduce using rule 7 (statement -> if_statement .)
    RBRACE          reduce using rule 7 (statement -> if_statement .)


state 8

    (8) statement -> wait_statement .

    DELAY           reduce using rule 8 (statement -> wait_statement .)
    LPAREN          reduce using rule 8 (statement -> wait_statement .)
    ALL             reduce using rule 8 (statement -> wait_statement .)
    IDENTIFIER      reduce using rule 8 (statement -> wait_statement .)
    IF              reduce using rule 8 (statement -> wait_statement .)
    WAIT_UNTIL      reduce using rule 8 (statement -> wait_statement .)
    LBRACE          reduce using rule 8 (statement -> wait_statement .)
    $end            reduce using rule 8 (statement -> wait_statement .)
    RBRACE          reduce using rule 8 (statement -> wait_statement .)


state 9

    (9) statement -> compound_statement .

    DELAY           reduce using rule 9 (statement -> compound_statement .)
    LPAREN          reduce using rule 9 (statement -> compound_statement .)
    ALL             reduce using rule 9 (statement -> compound_statement .)
    IDENTIFIER      reduce using rule 9 (statement -> compound_statement .)
    IF              reduce using rule 9 (statement -> compound_statement .)
    WAIT_UNTIL      reduce using rule 9 (statement -> compound_statement .)
    LBRACE          reduce using rule 9 (statement -> compound_statement .)
    $end            reduce using rule 9 (statement -> compound_statement .)
    RBRACE          reduce using rule 9 (statement -> compound_statement .)


state 10

    (40) statement -> DELAY . LPAREN expression RPAREN

    LPAREN          shift and go to state 18


state 11

    (16) action -> LPAREN . tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
    (17) action -> LPAREN . tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
    (10) tag_list -> . TAG
    (11) tag_list -> . tag_list TAG

    TAG             shift and go to state 20

    tag_list                       shift and go to state 19

state 12

    (24) assignment -> IDENTIFIER . ASSIGN expression
    (25) assignment -> IDENTIFIER . DECLARE expression

    ASSIGN          shift and go to state 21
    DECLARE         shift and go to state 22


state 13

    (18) all_action -> ALL . LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
    (19) all_action -> ALL . LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN

    LPAREN          shift and go to state 23


state 14

    (37) if_statement -> IF . LPAREN condition_list RPAREN compound_statement else_clause

    LPAREN          shift and go to state 24


state 15

    (54) wait_statement -> WAIT_UNTIL . LPAREN condition_list RPAREN
    (55) wait_statement -> WAIT_UNTIL . LPAREN period_time RPAREN

    LPAREN          shift and go to state 25


state 16

    (36) compound_statement -> LBRACE . statement_list RBRACE
    (2) statement_list -> . statement
    (3) statement_list -> . statement statement_list
    (4) statement -> . action
    (5) statement -> . all_action
    (6) statement -> . assignment
    (7) statement -> . if_statement
    (8) statement -> . wait_statement
    (9) statement -> . compound_statement
    (40) statement -> . DELAY LPAREN expression RPAREN
    (16) action -> . LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
    (17) action -> . LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
    (18) all_action -> . ALL LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
    (19) all_action -> . ALL LPAREN tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
    (24) assignment -> . IDENTIFIER ASSIGN expression
    (25) assignment -> . IDENTIFIER DECLARE expression
    (37) if_statement -> . IF LPAREN condition_list RPAREN compound_statement else_clause
    (54) wait_statement -> . WAIT_UNTIL LPAREN condition_list RPAREN
    (55) wait_statement -> . WAIT_UNTIL LPAREN period_time RPAREN
    (36) compound_statement -> . LBRACE statement_list RBRACE

    DELAY           shift and go to state 10
    LPAREN          shift and go to state 11
    ALL             shift and go to state 13
    IDENTIFIER      shift and go to state 12
    IF              shift and go to state 14
    WAIT_UNTIL      shift and go to state 15
    LBRACE          shift and go to state 16

    statement_list                 shift and go to state 26
    statement                      shift and go to state 3
    action                         shift and go to state 4
    all_action                     shift and go to state 5
    assignment                     shift and go to state 6
    if_statement                   shift and go to state 7
    wait_statement                 shift and go to state 8
    compound_statement             shift and go to state 9

state 17

    (3) statement_list -> statement statement_list .

    $end            reduce using rule 3 (statement_list -> statement statement_list .)
    RBRACE          reduce using rule 3 (statement_list -> statement statement_list .)


state 18

    (40) statement -> DELAY LPAREN . expression RPAREN
    (13) expression -> . tag_expression DOT IDENTIFIER
    (14) expression -> . tag_expression DOT IDENTIFIER LPAREN input RPAREN
    (15) expression -> . tag_expression DOT IDENTIFIER LPAREN RPAREN
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . ALL LPAREN tag_list RPAREN DOT IDENTIFIER
    (23) expression -> . expression PERCENT
    (26) expression -> . IDENTIFIER
    (27) expression -> . INTEGER
    (28) expression -> . DOUBLE
    (29) expression -> . STRING_LITERAL
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression MINUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (12) tag_expression -> . LPAREN tag_list RPAREN

    ALL             shift and go to state 31
    IDENTIFIER      shift and go to state 30
    INTEGER         shift and go to state 32
    DOUBLE          shift and go to state 33
    STRING_LITERAL  shift and go to state 34
    LPAREN          shift and go to state 27

    expression                     shift and go to state 28
    tag_expression                 shift and go to state 29

state 19

    (16) action -> LPAREN tag_list . RPAREN DOT IDENTIFIER LPAREN RPAREN
    (17) action -> LPAREN tag_list . RPAREN DOT IDENTIFIER LPAREN input RPAREN
    (11) tag_list -> tag_list . TAG

    RPAREN          shift and go to state 35
    TAG             shift and go to state 36


state 20

    (10) tag_list -> TAG .

    RPAREN          reduce using rule 10 (tag_list -> TAG .)
    TAG             reduce using rule 10 (tag_list -> TAG .)


state 21

    (24) assignment -> IDENTIFIER ASSIGN . expression
    (13) expression -> . tag_expression DOT IDENTIFIER
    (14) expression -> . tag_expression DOT IDENTIFIER LPAREN input RPAREN
    (15) expression -> . tag_expression DOT IDENTIFIER LPAREN RPAREN
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . ALL LPAREN tag_list RPAREN DOT IDENTIFIER
    (23) expression -> . expression PERCENT
    (26) expression -> . IDENTIFIER
    (27) expression -> . INTEGER
    (28) expression -> . DOUBLE
    (29) expression -> . STRING_LITERAL
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression MINUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (12) tag_expression -> . LPAREN tag_list RPAREN

    ALL             shift and go to state 31
    IDENTIFIER      shift and go to state 30
    INTEGER         shift and go to state 32
    DOUBLE          shift and go to state 33
    STRING_LITERAL  shift and go to state 34
    LPAREN          shift and go to state 27

    expression                     shift and go to state 37
    tag_expression                 shift and go to state 29

state 22

    (25) assignment -> IDENTIFIER DECLARE . expression
    (13) expression -> . tag_expression DOT IDENTIFIER
    (14) expression -> . tag_expression DOT IDENTIFIER LPAREN input RPAREN
    (15) expression -> . tag_expression DOT IDENTIFIER LPAREN RPAREN
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . ALL LPAREN tag_list RPAREN DOT IDENTIFIER
    (23) expression -> . expression PERCENT
    (26) expression -> . IDENTIFIER
    (27) expression -> . INTEGER
    (28) expression -> . DOUBLE
    (29) expression -> . STRING_LITERAL
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression MINUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (12) tag_expression -> . LPAREN tag_list RPAREN

    ALL             shift and go to state 31
    IDENTIFIER      shift and go to state 30
    INTEGER         shift and go to state 32
    DOUBLE          shift and go to state 33
    STRING_LITERAL  shift and go to state 34
    LPAREN          shift and go to state 27

    expression                     shift and go to state 38
    tag_expression                 shift and go to state 29

state 23

    (18) all_action -> ALL LPAREN . tag_list RPAREN DOT IDENTIFIER LPAREN RPAREN
    (19) all_action -> ALL LPAREN . tag_list RPAREN DOT IDENTIFIER LPAREN input RPAREN
    (10) tag_list -> . TAG
    (11) tag_list -> . tag_list TAG

    TAG             shift and go to state 20

    tag_list                       shift and go to state 39

state 24

    (37) if_statement -> IF LPAREN . condition_list RPAREN compound_statement else_clause
    (41) condition_list -> . condition
    (42) condition_list -> . LPAREN condition_list RPAREN
    (43) condition_list -> . condition_list AND condition_list
    (44) condition_list -> . condition_list OR condition_list
    (45) condition_list -> . ANY condition_list
    (46) condition_list -> . ALL condition_list
    (47) condition_list -> . NOT condition
    (48) condition -> . expression GE expression
    (49) condition -> . expression LE expression
    (50) condition -> . expression EQ expression
    (51) condition -> . expression NE expression
    (52) condition -> . expression GT expression
    (53) condition -> . expression LT expression
    (13) expression -> . tag_expression DOT IDENTIFIER
    (14) expression -> . tag_expression DOT IDENTIFIER LPAREN input RPAREN
    (15) expression -> . tag_expression DOT IDENTIFIER LPAREN RPAREN
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . ALL LPAREN tag_list RPAREN DOT IDENTIFIER
    (23) expression -> . expression PERCENT
    (26) expression -> . IDENTIFIER
    (27) expression -> . INTEGER
    (28) expression -> . DOUBLE
    (29) expression -> . STRING_LITERAL
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression MINUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (12) tag_expression -> . LPAREN tag_list RPAREN

    LPAREN          shift and go to state 40
    ANY             shift and go to state 43
    ALL             shift and go to state 44
    NOT             shift and go to state 45
    IDENTIFIER      shift and go to state 30
    INTEGER         shift and go to state 32
    DOUBLE          shift and go to state 33
    STRING_LITERAL  shift and go to state 34

    condition_list                 shift and go to state 41
    condition                      shift and go to state 42
    expression                     shift and go to state 46
    tag_expression                 shift and go to state 29

state 25

    (54) wait_statement -> WAIT_UNTIL LPAREN . condition_list RPAREN
    (55) wait_statement -> WAIT_UNTIL LPAREN . period_time RPAREN
    (41) condition_list -> . condition
    (42) condition_list -> . LPAREN condition_list RPAREN
    (43) condition_list -> . condition_list AND condition_list
    (44) condition_list -> . condition_list OR condition_list
    (45) condition_list -> . ANY condition_list
    (46) condition_list -> . ALL condition_list
    (47) condition_list -> . NOT condition
    (56) period_time -> . INTEGER time_unit
    (48) condition -> . expression GE expression
    (49) condition -> . expression LE expression
    (50) condition -> . expression EQ expression
    (51) condition -> . expression NE expression
    (52) condition -> . expression GT expression
    (53) condition -> . expression LT expression
    (13) expression -> . tag_expression DOT IDENTIFIER
    (14) expression -> . tag_expression DOT IDENTIFIER LPAREN input RPAREN
    (15) expression -> . tag_expression DOT IDENTIFIER LPAREN RPAREN
    (20) expression -> . expression AND expression
    (21) expression -> . expression OR expression
    (22) expression -> . ALL LPAREN tag_list RPAREN DOT IDENTIFIER
    (23) expression -> . expression PERCENT
    (26) expression -> . IDENTIFIER
    (27) expression -> . INTEGER
    (28) expression -> . DOUBLE
    (29) expression -> . STRING_LITERAL
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression MINUS expression
    (32) expression -> . expression TIMES expression
    (33) expression -> . expression DIVIDE expression
    (12) tag_expression -> . LPAREN tag_list RPAREN

    LPAREN          shift and go to state 40
    ANY             shift and go to state 43
    ALL             shift and go to state 44
    NOT             shift and go to state 45
    INTEGER         shift and go to state 49
    IDENTIFIER      shift and go to state 30
    DOUBLE          shift and go to state 33
    STRING_LITERAL  shift and go to state 34

    condition_list                 shift and go to state 47
    period_time                    shift and go to state 48
    condition                      shift and go to state 42
    expression                     shift and go to state 46
    tag_expression                 shift and go to state 29

state 26

    (36) compound_statement -> LBRACE statement_list . RBRACE

    RBRACE          shift and go to state 50


state 27

    (12) tag_expression -> LPAREN . tag_list RPAREN
    (10) tag_list -> . TAG
    (11) tag_list -> . tag_list TAG

    TAG             shift and go to state 20

    tag_list                       shift and go to state 51

state 28

    (40) statement -> DELAY LPAREN expression . RPAREN
    (20) expression -> expression . AND expression
    (21) expression -> expression . OR expression
    (23) expression -> expression . PERCENT
    (30) expression -> expression . PLUS expression
    (31) expression -> expression . MINUS expression
    (32) expression -> expression . TIMES expression
    (33) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 52
    AND             shift and go to state 53
    OR              shift and go to state 54
    PERCENT         shift and go to state 55
    PLUS            shift and go to state 56
    MINUS           shift and go to state 57
    TIMES           shift and go to state 58
    DIVIDE          shift and go to state 59


state 29

    (13) expression -> tag_expression . DOT IDENTIFIER
    (14) expression -> tag_expression . DOT IDENTIFIER LPAREN input RPAREN
    (15) expression -> tag_expression . DOT IDENTIFIER LPAREN RPAREN

    DOT             shift and go to state 60


state 30

    (26) expression -> IDENTIFIER .

    RPAREN          reduce using rule 26 (expression -> IDENTIFIER .)
    AND             reduce using rule 26 (expression -> IDENTIFIER .)
    OR              reduce using rule 26 (expression -> IDENTIFIER .)
    PERCENT         reduce using rule 26 (expression -> IDENTIFIER .)
    PLUS            reduce using rule 26 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 26 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 26 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 26 (expression -> IDENTIFIER .)
    DELAY           reduce using rule 26 (expression -> IDENTIFIER .)
    LPAREN          reduce using rule 26 (expression -> IDENTIFIER .)
    ALL             reduce using rule 26 (expression -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 26 (expression -> IDENTIFIER .)
    IF              reduce using rule 26 (expression -> IDENTIFIER .)
    WAIT_UNTIL      reduce using rule 26 (expression -> IDENTIFIER .)
    LBRACE          reduce using rule 26 (expression -> IDENTIFIER .)
    $end            reduce using rule 26 (expression -> IDENTIFIER .)
    RBRACE          reduce using rule 26 (expression -> IDENTIFIER .)
    GE              reduce using rule 26 (expression -> IDENTIFIER .)
    LE              reduce using rule 26 (expression -> IDENTIFIER .)
    EQ              reduce using rule 26 (expression -> IDENTIFIER .)
    NE              reduce using rule 26 (expression -> IDENTIFIER .)
    GT              reduce using rule 26 (expression -> IDENTIFIER .)
    LT              reduce using rule 26 (expression -> IDENTIFIER .)
    COMMA           reduce using rule 26 (expression -> IDENTIFIER .)


state 31

    (22) expression -> ALL . LPAREN tag_list RPAREN DOT IDENTIFIER

    LPAREN          shift and go to state 61


state 32

    (27) expression -> INTEGER .

    RPAREN          reduce using rule 27 (expression -> INTEGER .)
    AND             reduce using rule 27 (expression -> INTEGER .)
    OR              reduce using rule 27 (expression -> INTEGER .)
    PERCENT         reduce using rule 27 (expression -> INTEGER .)
    PLUS            reduce using rule 27 (expression -> INTEGER .)
    MINUS           reduce using rule 27 (expression -> INTEGER .)
    TIMES           reduce using rule 27 (expression -> INTEGER .)
    DIVIDE          reduce using rule 27 (expression -> INTEGER .)
    DELAY           reduce using rule 27 (expression -> INTEGER .)
    LPAREN          reduce using rule 27 (expression -> INTEGER .)
    ALL             reduce using rule 27 (expression -> INTEGER .)
    IDENTIFIER      reduce using rule 27 (expression -> INTEGER .)
    IF              reduce using rule 27 (expression -> INTEGER .)
    WAIT_UNTIL      reduce using rule 27 (expression -> INTEGER .)
    LBRACE          reduce using rule 27 (expression -> INTEGER .)
    $end            reduce using rule 27 (expression -> INTEGER .)
    RBRACE          reduce using rule 27 (expression -> INTEGER .)
    GE              reduce using rule 27 (expression -> INTEGER .)
    LE              reduce using rule 27 (expression -> INTEGER .)
    EQ              reduce using rule 27 (expression -> INTEGER .)
    NE              reduce using rule 27 (expression -> INTEGER .)
    GT              reduce using rule 27 (expression -> INTEGER .)
    LT              reduce using rule 27 (expression -> INTEGER .)
    COMMA           reduce using rule 27 (expression -> INTEGER .)


state 33

    (28) expression -> DOUBLE .

    RPAREN          reduce using rule 28 (expression -> DOUBLE .)
    AND             reduce using rule 28 (expression -> DOUBLE .)
    OR              reduce using rule 28 (expression -> DOUBLE .)
    PERCENT         reduce using rule 28 (expression -> DOUBLE .)
    PLUS            reduce using rule 28 (expression -> DOUBLE .)
    MINUS           reduce using rule 28 (expression -> DOUBLE .)
    TIMES           reduce using rule 28 (expression -> DOUBLE .)
    DIVIDE          reduce using rule 28 (expression -> DOUBLE .)
    DELAY           reduce using rule 28 (expression -> DOUBLE .)
    LPAREN          reduce using rule 28 (expression -> DOUBLE .)
    ALL             reduce using rule 28 (expression -> DOUBLE .)
    IDENTIFIER      reduce using rule 28 (expression -> DOUBLE .)
    IF              reduce using rule 28 (expression -> DOUBLE .)
    WAIT_UNTIL      reduce using rule 28 (expression -> DOUBLE .)
    LBRACE          reduce using rule 28 (expression -> DOUBLE .)
    $end            reduce using rule 28 (expression -> DOUBLE .)
    RBRACE          reduce using rule 28 (expression -> DOUBLE .)
    GE              reduce using rule 28 (expression -> DOUBLE .)
    LE              reduce using rule 28 (expression -> DOUBLE .)
    EQ              reduce using rule 28 (expression -> DOUBLE .)
    NE              reduce using rule 28 (expression -> DOUBLE .)
    GT              reduce using rule 28 (expression -> DOUBLE .)
    LT              reduce using rule 28 (expression -> DOUBLE .)
    COMMA           reduce using rule 28 (expression -> DOUBLE .)


state 34

    (29) expression -> STRING_LITERAL .

    RPAREN          reduce using rule 29 (expression -> STRING_LITERAL .)
    AND             reduce using rule 29 (expression -> STRING_LITERAL .)
    OR              reduce using rule 29 (expression -> STRING_LITERAL .)
    PERCENT         reduce using rule 29 (expression -> STRING_LITERAL .)
    PLUS            reduce using rule 29 (expression -> STRING_LITERAL .)
    MINUS           reduce using rule 29 (expression -> STRING_LITERAL .)
    TIMES           reduce using rule 29 (expression -> STRING_LITERAL .)
    DIVIDE          reduce using rule 29 (expression -> STRING_LITERAL .)
    DELAY           reduce using rule 29 (expression -> STRING_LITERAL .)
    LPAREN          reduce using rule 29 (expression -> STRING_LITERAL .)
    ALL             reduce using rule 29 (expression -> STRING_LITERAL .)
    IDENTIFIER      reduce using rule 29 (expression -> STRING_LITERAL .)
    IF              reduce using rule 29 (expression -> STRING_LITERAL .)
    WAIT_UNTIL      reduce using rule 29 (expression -> STRING_LITERAL .)
    LBRACE          reduce using rule 29 (expression -> STRING_LITERAL .)
    $end            reduce using rule 29 (expression -> STRING_LITERAL .)
    RBRACE          reduce using rule 29 (expression -> STRING_LITERAL .)
    GE              reduce using rule 29 (expression -> STRING_LITERAL .)
    LE              reduce using rule 29 (expression -> STRING_LITERAL .)
    EQ              reduce using rule 29 (expression -> STRING_LITERAL .)
    NE              reduce using rule 29 (expression -> STRING_LITERAL .)
    GT              reduce using rule 29 (expression -> STRING_LITERAL .)
    LT              reduce using rule 29 (expression -> STRING_LITERAL .)
    COMMA           reduce using rule 29 (expression -> STRING_LITERAL .)


state 35

    (16) action -> LPAREN tag_list RPAREN . DOT IDENTIFIER LPAREN RPAREN
    (17) action -> LPAREN tag_list RPAREN . DOT IDENTIFIER LPAREN input RPAREN

    DOT             shift and go to state 62


state 36

    (11) tag_list -> tag_list TAG .

    RPAREN          reduce using rule 11 (tag_list -> tag_list TAG .)
    TAG             reduce using rule 11 (tag_list -> tag_list TAG .)


state 37

    (24) assignment -> IDENTIFIER ASSIGN expression .
    (20) expression -> expression . AND expression
    (21) expression -> expression . OR expression
    (23) expression -> expression . PERCENT
    (30) expression -> expression . PLUS expression
    (31) expression -> expression . MINUS expression
    (32) expression -> expression . TIMES expression
    (33) expression -> expression . DIVIDE expression
